# nearai

./: .dockerignore  .gitignore  404.html  Cargo.toml  DEV_ENV.md  Dockerfile  Dockerfile.dev.hub  README.md  db.yaml  docker-compose-hub.yaml  docker-compose.yaml  index.html  install.sh  mkdocs.yaml  objects.inv  package-lock.json  pyproject.toml  setup_and_run.sh  sitemap.xml
.docker/: Dockerfile.cvm_hub  Dockerfile.cvm_pool  Dockerfile.cvm_runner  Dockerfile.nearai_base  compose-e2e.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  new-feature.yml
.github/workflows/: base-hub-ci-cd.yaml  ci.yml  frontend-ci.yml  release.yml  stale.yml
agent_triggers/: index.html
agents/integration/: index.html
agents/quickstart/: index.html
agents/registry/: index.html
agents/running/: index.html
agents/secrets/: index.html
agents/streaming/: index.html
agents/threads/: index.html
agents/vector-stores/: index.html
api/: index.html
api/guide/: index.html
assistants/integrate/: index.html
assistants/overview/: index.html
attestation/: client.py  test_client.py
aws_runner/: Dockerfile  LOCAL_TESTING.md  README.md  deploy.sh  partial_near_client.py  service.py
aws_runner/frameworks/: requirements-agentkit.txt  requirements-base.txt  requirements-langgraph-0-1-4.txt  requirements-langgraph-0-2-26.txt  requirements-masa.txt  requirements-minimal.txt  requirements-standard.txt  requirements-ts.txt~67bdfb8a (Adding datadog dependencies to the lambdas)  requirements-web-agent.txt
aws_runner/local/: README.md  docker-compose.yml
aws_runner/local_runners/: docker-compose.yml
aws_runner/mcp/: docker-compose.yml
aws_runner/openapi_client/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  near-openapi.json  previous-openapi.json  rest.py
aws_runner/py_runner/: Dockerfile
aws_runner/runner/: agent.py  environment.py  xela_agent_v4.py
aws_runner/ts_runner_exp/: .dockerignore  Dockerfile
aws_runner/ts_runner_jutsu/: .dockerignore  Dockerfile
cli/: index.html
cloud/: index.html
cloud/get-started/: index.html
cloud/private-inference/: index.html
cloud/verification/: index.html
cloud_infra/: Cargo.toml
contributing/: index.html
decentralization/: index.html
docs/: agent_triggers.md  agents.md  cli.md  cli_command_reference.md  contributing.md  docs.css  how-to-build-an-agent.md  hub.md  index.md  inference.md  private-ml-sdk.md  vector-stores.md
docs/agents/: integration.md  orchestration.md  quickstart.md  registry.md  running.md  secrets.md  streaming.md
docs/api/: guide.md
docs/assistants/: integrate.md
docs/cloud/: get-started.md  index.md  private-inference.md  verification.md
docs/examples/: near-agent-example.md  near-blockhain-agent.md  overview.md
docs/javascripts/: agent-iframe-embed.js
docs/models/: home.md  models.md
docs/protocols/: agent_protocol.md  agent_protocol_example.json
host_api/: Cargo.toml
host_api/examples/: use_in_thread.rs
host_api/src/: lib.rs  main.rs
hub/: .env.example  Dockerfile  NGINX_CONFIG.md  README.md  app.py  images.generations.doc.http  index.html  package-lock.json  scheduler.py
hub/alembic/: env.py
hub/background/: task_queue.py
hub/demo/: next.config.ts  package-lock.json  package.json  tsconfig.json
hub/examples/: agent_verify.py  chat_verify.py  confidential_chat_openai_client.py  image_generation.py  private_inference.py  streaming_agents.py  streaming_completion.py  vector_store.py  vector_store_from_source.py
hub/tasks/: embedding_generation.py  github_import.py  near_events.py  scheduler.py  triggers.py  twitter_client.py
hub/tests/: test_agents.py  test_registry.py  test_threads.py  test_vector_stores.py
inference/: index.html
infra/datadog-agent/: .env.example  docker-compose.yaml
integration/overview/: index.html
integration/quickstart/: index.html
jasnah/: agent.py  cli.py  config.py  environment.py  registry.py  tool_registry.py
jasnah/finetune/: __init__.py
jasnah/tests/: test_environment.py
models/benchmarks_and_evaluations/: index.html
models/fine_tuning/: index.html
models/home/: index.html
near_events/: index.html
nearai/: agent_creator.py  benchmark.py  cli.py  cli_help.py  cli_helpers.py  config.py  environment.py  evaluation.py  login.py  registry.py  wind_down_check.py
nearai/agents/: agent.py  analytics.py  environment.py  local_runner.py  mcp_helper.py  template.py.txt  tool_json_helper.py  tool_registry.py
nearai/aws_runner/: cache_manager.py  cache_models.py  partial_near_client.py  service.py
nearai/clients/: lambda_client.py
nearai/finetune/: __init__.py
nearai/openapi_client/: api_client.py  configuration.py
nearai/shared/: client_config.py  inference_client.py  models.py  naming.py  provider_models.py
nearai/solvers/: __init__.py  ddot_v0_solver.py  gsm8k_solver.py  hellaswag_solver.py  livebench_solver.py  mbpp_agent_solver.py  mbpp_solver.py  mmlu_solver.py
nearai/tests/: test_agent_state_isolation.py  test_cache_manager.py  test_registry_cli.py
private-ml-sdk/: index.html
quote/: quote.py
scripts/: near-openapi.json
search/: search_index.json
shared/: client_config.py  inference_client.py
tdx_host_lib/: Cargo.toml
tee_infra/cvm_client/: Cargo.toml  README.md
tee_infra/cvm_client/src/: lib.rs
tee_infra/guest_manager/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
tee_infra/guest_manager/src/: lib.rs  main.rs
tee_infra/host_api/: Cargo.toml  README.md
tee_infra/host_api/examples/: use_in_thread.rs
tee_infra/host_api/src/: lib.rs  main.rs
tee_infra/host_api/tests/: get_sealing_key_tests.rs  key_provider_mock.rs  server_tests.rs
tee_infra/host_runner/: Cargo.toml  README.md  db.yaml
tee_infra/host_runner/src/: lib.rs  main.rs
tee_infra/host_runner/tests/: test_setup_instance.rs
tee_infra/near_auth/: Cargo.toml
tee_infra/near_auth/src/: lib.rs
tests/: test_registry_cli.py
ts_runner_exp/: agent-runner.js  package.json
ts_runner_jutsu/: agent-runner.js  package.json
vector-stores/: index.html
(+1032 files in other folders)
