[package]
name = "guest_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
cvm_client = { path = "../cvm_client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["http1", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["trace"] }
near_auth = { path = "../near_auth", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
urlencoding = "2.1"
rand = "0.9"
