[package]
name = "host_runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "host_runner"
path = "src/lib.rs"

[dependencies]
host_api = { path = "../host_api" }
anyhow = "1"
ctrlc = "3.4"
ini = "1.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "6"
rand = "0.9"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.31", features = ["derive"] }
