[package]
name = "near_auth"
version = "0.1.0"
edition = "2024"

[features]
default = []
axum = ["dep:axum", "dep:axum-extra"]

[dependencies]
base64 = "0.21.0"
borsh = "0.10.3"
bs58 = "0.5.0"
ed25519-dalek = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
thiserror = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1"

# Optional dependencies for axum integration
axum = { version = "0.8", features = ["http1", "macros"], optional = true }
axum-extra = { version = "0.10", features = ["typed-header"], optional = true }
